# defold

./: .gitignore  CMakeLists.txt  apply_license.py  crowdin.yml
.github/workflows/: bisect.yml  editor-only.yml  engine-nightly.yml  main-ci.yml
build_tools/: sdk.py  waf_csharp.py  waf_dynamo.py
ci/: ci.py
editor/: project.clj
editor/resources/: liveupdate-meta.properties  meta.edn
editor/resources/icons/: svg_icons.html
editor/resources/localization/: en.editor_localization  pt_BR.editor_localization  ru.editor_localization  zh_CN.editor_localization
editor/scripts/: bundle.py
editor/src/clj/editor/: app_manifest.clj  app_view.clj  asset_browser.clj  atlas.clj  boot_open_project.clj  camera.clj  cljfx_form_view.clj  font.clj  grid.clj  gui.clj  input.clj  keymap.clj  localization.clj  lua.clj  prefs.clj  properties_view.clj  scene.clj  settings.clj  ui.clj
editor/src/clj/editor/code/: view.clj
editor/src/clj/editor/pipeline/: tex_gen.clj  texture_set_gen.clj
editor/src/clj/util/: digestable.clj
editor/styling/stylesheets/components/: _titled-pane.scss
editor/styling/stylesheets/mixins/: _menu-elements.scss
editor/test/integration/: editor_extensions_test.clj  test_util.clj
engine/ddf/src/test/: test_ddf.cpp  test_ddf.h  test_ddf_struct.cpp
engine/dlib/src/: wscript
engine/dlib/src/dlib/: jobsystem.cpp  sslsocket.cpp
engine/dlib/src/dmsdk/dlib/: crypt.h  jobsystem.h  uri.h
engine/dlib/src/mbedtls/: defold_mbedtls_threading.cpp
engine/dlib/src/mbedtls/include/: defold_mbedtls_threading.h  threading_alt.h
engine/dlib/src/test/: test_configfile.cpp  test_httpclient.cpp  test_job_system.cpp  test_ssdp_internals.cpp  wscript
engine/engine/: wscript
engine/engine/src/: engine.cpp  engine_loop.cpp
engine/engine/src/script/: script_engine.cpp
engine/engine/src/test/: wscript
engine/engine/src/test/collection_proxy/: test_collection_proxy.script
engine/engine/src/test/gui/: material_script_functions.script
engine/font/src/: text_layout_legacy.cpp  text_layout_skribidi.cpp
engine/font/src/test/: test_font.cpp
engine/gameobject/src/dmsdk/gameobject/: gameobject.h
engine/gameobject/src/gameobject/: gameobject.cpp  gameobject.h  gameobject_props.h  gameobject_script.cpp  gameobject_script_util.cpp  gameobject_script_util.h  res_collection.cpp
engine/gamesys/: CMakeLists.txt
engine/gamesys/proto/gamesys/: gamesys_ddf.proto
engine/gamesys/src/: proto_gamesys.py  waf_gamesys.py
engine/gamesys/src/gamesys/: gamesys.cpp  gamesys.h
engine/gamesys/src/gamesys/components/: comp_collection_proxy.cpp  comp_gui.cpp  comp_label.cpp  comp_light.cpp  comp_mesh.cpp  comp_model.cpp  comp_particlefx.cpp
engine/gamesys/src/gamesys/fontgen/: fontgen.cpp
engine/gamesys/src/gamesys/resources/: res_font.cpp  res_light.cpp  res_light.h  res_mesh.cpp  res_mesh.h  res_model.cpp
engine/gamesys/src/gamesys/scripts/: script_label.cpp  script_particlefx.cpp  script_sys_gamesys.cpp
engine/gamesys/src/gamesys/test/: CMakeLists.txt  test_gamesys.cpp  test_gamesys.h
engine/gamesys/src/gamesys/test/particlefx/: particlefx_get_set_properties.go  particlefx_get_set_properties.script
engine/graphics/proto/graphics/: graphics_ddf.proto
engine/graphics/src/: graphics.cpp  graphics.h  wscript
engine/graphics/src/dmsdk/graphics/: graphics.h
engine/graphics/src/dx12/: graphics_dx12.cpp  graphics_dx12_private.h
engine/graphics/src/metal/: graphics_metal.mm  graphics_metal_private.h
engine/graphics/src/null/: graphics_null.cpp  graphics_null_private.h
engine/graphics/src/opengl/: graphics_opengl.cpp  graphics_opengl_private.h
engine/graphics/src/test/: test_app_graphics.cpp  test_app_graphics.h  test_app_graphics_assets.h  test_app_graphics_package_assets.py  test_graphics.cpp  wscript
engine/graphics/src/vulkan/: graphics_vulkan.cpp  graphics_vulkan_private.h
engine/graphics/src/webgpu/: graphics_webgpu.cpp
engine/gui/src/: gui_script.cpp
engine/hid/: CMakeLists.txt
engine/input/: CMakeLists.txt
engine/input/src/test/: CMakeLists.txt
engine/jni/src/jni/: jni_util.h
engine/liveupdate/src/: liveupdate.cpp
engine/liveupdate/src/test/: test_liveupdate_job.cpp
engine/modelc/src/: modelimporter.h  modelimporter_gltf.cpp
engine/modelc/src/jni/: Modelimporter_jni.cpp  Modelimporter_jni.h
engine/particle/src/: particle.cpp  particle.h  particle_private.h
engine/platform/src/: platform_window.h  platform_window_glfw3.cpp
engine/platform/src/test/: CMakeLists.txt
engine/render/src/render/: light.cpp  program_utils.cpp  render.cpp  render.h
engine/render/src/render/font/: fontmap.cpp  (+2 more)
engine/render/src/test/: test_render.cpp
engine/resource/src/: resource_private.h  resource_streamer.cpp
engine/resource/src/mount/: mount_android.cpp  mount_generic.cpp  mount_mmap.cpp
engine/resource/src/providers/: provider_zip.cpp
engine/resource/src/test/: test_resource.cpp  test_resource_archive.cpp  wscript
engine/rig/proto/rig/: rig_ddf.proto
engine/shaderc/src/: shaderc.h  shaderc_spvc.cpp
engine/shaderc/src/jni/: Shaderc_jni.cpp  Shaderc_jni.h
engine/shaderc/src/test/: test_shaderc.cpp
engine/sound/src/: sound.cpp  sound.h  sound_null.cpp  sound_openal.cpp  wscript
engine/sound/src/test/: test_sound.cpp
engine/texc/src/: texc.cpp  texc.h  texc_private.cpp  texc_private.h  texclibrary_jni.cpp
releasenotes/: 1.11.2.json  1.11.2.md  1.12.0.json  1.12.0.md
scripts/: build.py  releasenotes_github_projectv2.py  skip_sdk_tests_patch.py
scripts/cmake/: bin2cpp.py  compile_luascript.py  defold.cmake  functions.cmake  functions_content.cmake  functions_embed.cmake  functions_glfw.cmake  functions_graphics.cmake  functions_libs.cmake  functions_lua.cmake  functions_opengl.cmake  functions_protoc.cmake  functions_testserver.cmake  platform_android.cmake  platform_host.cmake  platform_html5.cmake  platform_macos.cmake  platform_windows.cmake  proto_text_to_binary.py  sdk.cmake  testserver.py
scripts/package/: package_android_sdk.sh
share/ext/spirv-cross/: build_spirv-cross.sh
share/extender/: build_input.yml
(+73 files in other folders)
